@startuml posapp
entity Enterprise{
    * EnterpriseID      : Integer
    --
    EnterpriseName      : VARCHAR
    NPWP                : VARCHAR
    PIC                 : VARCHAR
    RegisteredAddress   : VARCHAR
    RegisteredPhone     : VARCHAR
    BusinessAddress     : VARCHAR
    BusinessPhone       : VARCHAR

}
entity Outlet{
    * OutletID    : Integer
    --
    OutletName    : VARCHAR
    OutletAddress : VARCHAR
    Platform      : VARCHAR
}
entity Employee{
    * EmployeeID    : Integer
    --
    EmployeeFirstName    : VARCHAR
    EmployeeLastName     : VARCHAR
    EmployeeAddress      : VARCHAR
    EmployeePhone        : VARCHAR
}
entity InventoryControl{
    * ProductID   : Integer
    * OutletID    : Integer
    --
    Quantity      : VARCHAR
}
entity Product {
    * ProductID : Integer
    --
    ProductName : VARCHAR
    Price       : VARCHAR
    Desc        : TEXT
}
entity Order {
    * OrderID   : Integer
    --
    EmployeeID  : VARCHAR
    OutletID    : VARCHAR
    CustomerID  : VARCHAR
    PaymentID   : VARCHAR
    PromotionID : VARCHAR

}
entity OrderDetail{
    * OrderID   : Integer
    * ProductID : Integer
    --
    Quantity    : VARCHAR
}
entity PaymentMethod{
    * PaymentID : Integer
    --
    PaymentName : VARCHAR
    Desc        : TEXT
    Status      : VARCHAR
}

entity Payments{
    * PaymentId : Integer
    --
    Status      : VARCHAR
}

entity Promotion{
    * PromotionID : Integer
    --
    PromotionCode : VARCHAR
    Status        : VARCHAR
}
entity  Customer{
    * CustomerID    : Integer
    --
    CustomerName    : VARCHAR
    CustomerAddress : VARCHAR
}

Enterprise ||--|{ Outlet : Opens
Enterprise ||--|{ Employee : Recruits
Outlet ||--|{ InventoryControl : Has
Outlet ||--|{ Order : Registers
Customer ||--|{ Order : Makes
Employee ||--|{ Order : Registers
Order ||--|{ OrderDetail : Has
Order }|--|| Promotion : Assigns
Order ||--|| Payments : Assigns
PaymentMethod ||--|{ Payments : Has
OrderDetail }|--|{ Product : Contains
InventoryControl }|--|{ Product : Manages
@enduml

